feat: criando projeto

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /java_basico-simulando_um_conta_bancaria/ContaBanco/nbproject/private/
 /java_basico-simulando_um_conta_bancaria/ContaBanco/build/
+/java_basico-controle_de_fluxo/Contador/nbproject/private/
