feat: adicionando classes Contador e ParamentroInvalidosException

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /java_basico-simulando_um_conta_bancaria/ContaBanco/nbproject/private/
 /java_basico-simulando_um_conta_bancaria/ContaBanco/build/
 /java_basico-controle_de_fluxo/Contador/nbproject/private/
+/java_basico-controle_de_fluxo/Contador/build/
