feat: criado projeto

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /java_basico-simulando_um_conta_bancaria/ContaBanco/build/
 /java_basico-controle_de_fluxo/Contador/nbproject/private/
 /java_basico-controle_de_fluxo/Contador/build/
+/Nova Pasta/Iphone/nbproject/private/
+/Nova Pasta/Iphone/build/
+/java_basico-uml_iphone2/Iphone/build/
+/java_basico-uml_iphone2/Iphone/nbproject/private/
+/java_basico-uml_iphone/Iphone/build/
+/java_basico-uml_iphone/Iphone/nbproject/private/
