feat: adicionando application-prd e alterando properties

--- a/java_springboot-desafio/restfullapi-animes/src/main/resources/application.properties
+++ b/java_springboot-desafio/restfullapi-animes/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#altere dev por prd para utilizar o postgres 
 spring.profiles.active=dev
+
+spring_profiles_active=prod
+#altere os campos conforme railway
+PGHOST=containers-us-west-54.railway.app
+PGPORT=6163
+PGDATABASE=railway
+PGUSER=postgres
+PGPASSWORD=VgbtAOCZCNNjcPBfpVyx
